# ikrz-pamsi

./: main.cpp
.devcontainer/: Dockerfile  devcontainer.json  install-gtest.sh
checkers/: CMakeLists.txt  Dockerfile  Makefile  README.md  build-in-container.sh
checkers/src/: main.cpp
checkers/src/checkers/: game.cpp  game.h  minimax.cpp  notation_encoder.cpp
checkers/src/client/: client.cpp  client.h  game_instance.cpp  net.cpp
checkers/src/include/: checkers.h  checkers_client.h
checkers/src/src/: board.h  game.cpp  game.h  minimax.cpp  minimax.h  notation_encoder.cpp
packet-transfer/: Makefile  README.md  benchmark.sh  benchmark_.sh  milestones.md  report.md
packet-transfer/docs/: .report.md.swp  report.md
packet-transfer/packet-transfer/common/include/: common.h  constants.h  error.h
packet-transfer/packet-transfer/common/src/: env_logger.c  env_logger.h  logger.c  logger.h
packet-transfer/packet-transfer/driver/: driver.c  driver.h  main.c
packet-transfer/packet-transfer/packets/include/: error.h  packets.h
packet-transfer/packet-transfer/packets/src/: message_receiver.c  message_receiver.h  message_transmitter.c  message_transmitter.h  packet.c  packet.h  stack.c  stack.h
packet-transfer/scripts/: benchmark_.sh
sorting-algs/: Makefile  benchmark.py  report.md
sorting-algs/sample-data/: test.csv
sorting-algs/src/: main.cpp
sorting-algs/src/algs/: bucketsort.hpp  mergesort.cpp  mergesort.hpp  quicksort.cpp  quicksort.hpp  sortable.hpp
sorting-algs/src/csv/include/: reader.hpp
sorting-algs/src/csv/src/: reader.cpp
